--- a/ansible/second_playbook.yaml
+++ b/ansible/second_playbook.yaml
@@ -1,6 +1,6 @@
 - name: hello_world_yaml
   hosts: frontend
-  connections: local
+  connection: local
   tasks:
   - name: printing hellow world msg
     ansible.builtin.debug:
