--- a/ansible/install_playbook.yaml
+++ b/ansible/install_playbook.yaml
@@ -1,6 +1,7 @@
 - name: nginx install
   hosts: local
   connection: local
+  become: yes
   tasks:
   - name: nginx install
     ansible.builtin.package:
