--- a/ansible/install_playbook.yaml
+++ b/ansible/install_playbook.yaml
@@ -7,3 +7,8 @@
     ansible.builtin.package:
       name: nginx
       state: present
+
+  - name: start the service
+    ansible.builtin.service:
+      name: nginx
+      state: started
