--- a/ansible/fifth_play_vars_pb.yaml
+++ b/ansible/fifth_play_vars_pb.yaml
@@ -9,3 +9,7 @@
   - name: printing the info with play_vars
     ansible.builtin.debug:
       msg: "hello {{ TRAINER }} sir, i joined {{ COURSE }} with {{ DURATION }} time"
+      
+  - name: printing the info again with play_vars
+    ansible.builtin.debug:
+      msg: "hello {{ TRAINER }} sir, i joined {{ COURSE }} with {{ DURATION }} time"
