--- a/ansible/inventory.ini
+++ b/ansible/inventory.ini
@@ -5,6 +5,6 @@
 localhost 
 
 [local:vars]
-COURSE: "devops_li"
-TRAINER: "siva"
-DURATION: "120HR"
+COURSE="devops_li"
+TRAINER="siva"
+DURATION="120HR"
