--- a/ansible/inventory.ini
+++ b/ansible/inventory.ini
@@ -5,6 +5,7 @@
 localhost 
 
 [local:vars]
-COURSE=devops_li
-TRAINER="siva"
-DURATION="120HR"
+COURSE=variables
+TRAINER=Sivakumar
+DURATION=1.5HR
+GREETING="Hello from Inventory"
