--- a/ansible/inventory.ini
+++ b/ansible/inventory.ini
@@ -4,8 +4,7 @@
 [local]
 localhost 
 
-[local:vars]
-COURSE=variables
-TRAINER=Sivakumar
-DURATION=1.5HR
-GREETING="Hello from Inventory"
+[local]
+COURSE=devops_li
+TRAINER="siva"
+DURATION="120HR"
