--- a/ansible/inventory.ini
+++ b/ansible/inventory.ini
@@ -2,9 +2,6 @@
 13.218.204.234
 
 [local]
-localhost 
+localhost COURSE="devops_li" TRAINER="siva" DURATION="120HR"
 
-[local]
-COURSE="devops_li"
-TRAINER="siva"
-DURATION="120HR"
+
