--- a/ansible/inventory.ini
+++ b/ansible/inventory.ini
@@ -2,6 +2,9 @@
 13.218.204.234
 
 [local]
-localhost COURSE="devops_li" TRAINER="siva" DURATION="120HR"
+localhost 
 
-
+[local:vars]
+COURSE="devops_li"
+TRAINER="siva"
+DURATION="120HR"
