--- a/ansible/inventory.ini
+++ b/ansible/inventory.ini
@@ -1,5 +1,5 @@
 [frontend_test]
-13.218.204.234 COURSE=devops_hosts TRAINER=siva DURATION=120HR
+13.218.204.234 COURSE="devops_hosts" TRAINER="siva" DURATION="120HR"
 
 
 
