--- a/ansible/12_vars_preference.yaml
+++ b/ansible/12_vars_preference.yaml
@@ -11,7 +11,7 @@
     private: false
   tasks:
   - name: vars_preference
-    vars:
-      Greetings: "tasks_greetings"
+    # vars:
+    #   Greetings: "tasks_greetings"
     ansible.builtin.debug:
       msg: "{{ Greetings }}"
