--- a/ansible/12_vars_preference.yaml
+++ b/ansible/12_vars_preference.yaml
@@ -14,4 +14,4 @@
     # vars:
     #   Greetings: "tasks_greetings"
     ansible.builtin.debug:
-      msg: "{{ ansible_facts }}"
+      msg: "{{ Greetings }}"
