--- a/ansible/14_conditions.yaml
+++ b/ansible/14_conditions.yaml
@@ -7,11 +7,9 @@
   - name: number is less than
     ansible.builtin.debug:
       msg: "hello this {{ Number }} is less than 100"
-    when:
-      Number <= 100
+    when: Number <= 100
 
   - name: number is greater than
     ansible.builtin.debug:
       msg: "hello this {{ Number }} is greater than 100"
-    when:
-      Number > 100
+    when: Number > 100
