--- a/ansible/16_conditions_facts.yaml
+++ b/ansible/16_conditions_facts.yaml
@@ -1,13 +1,14 @@
 - name: play control conditions_demo ansible_facts
   hosts: local
   connection: local
+  become: yes
   tasks:
   - name: ansible_facts_conditions_dnf
     ansible.builtin.dnf:
       name: nginx
       state: present
     when: ansible_os_family == "RedHat"
-    
+
   - name: ansible_facts_conditions_debian
     ansible.builtin.dnf:
       name: nginx
