--- a/ansible/17_loops.yaml
+++ b/ansible/17_loops.yaml
@@ -5,7 +5,7 @@
   - name: ansible_facts
     ansible.builtin.debug:
       msg: "hello {{ item }}"
-    loops:
+    loop:
     - suresh
     - nagavamsi
     - viswaprasad
