--- a/ansible/20_functions.yaml
+++ b/ansible/20_functions.yaml
@@ -28,7 +28,7 @@
       - {'key': 'duration', 'value': '10HR'}
       - {'key': 'trainer', 'value': 'sivakumar'}
     ansible.builtin.debug:
-      msg: "Course Info: {{ course | items2dict  }}"
+      msg: "{{ course }} --- Course Info: {{ course | items2dict  }}"
 
   - name: convert to uppercase
     vars:
