--- a/ansible/20_functions.yaml
+++ b/ansible/20_functions.yaml
@@ -24,9 +24,9 @@
   - name: convert list into map
     vars:
       course:
-      - {'key': 'name', 'value': 'ansible'}
-      - {'key': 'duration', 'value': '10HR'}
-      - {'key': 'trainer', 'value': 'sivakumar'}
+      - {'name', 'ansible'}
+      - {'duration', '10HR'}
+      - {'trainer', 'sivakumar'}
     ansible.builtin.debug:
       msg: "{{ course }} --- Course Info: {{ course | items2dict  }}"
 
