--- a/ansible/inventory.ini
+++ b/ansible/inventory.ini
@@ -1,7 +1,11 @@
 [frontend]
 13.218.204.234 COURSE="devops_hosts" TRAINER="siva" DURATION="120HR"
 
-
+[dynamic_frontend]
+13.218.204.234
+34.235.143.127
+54.224.243.63
+18.215.148.43
 
 [local]
 localhost 
